Closed Bug 1604106 Opened 5 years ago Closed 4 years ago

Handle errors gracefully in Windows' hal::SetProcessPriority() implementation

Categories

(Core :: Hardware Abstraction Layer (HAL), defect, P3)

All
Windows
defect

Tracking

()

RESOLVED FIXED
89 Branch
Tracking Status
firefox89 --- fixed

People

(Reporter: gsvelto, Assigned: gsvelto)

References

Details

Attachments

(1 file)

While we haven't seen new instances of bug 1533889 I think it's better to handle the error conditions gracefully. It's better to have proper fallback paths that are never used rather than crashes sometimes down the line.

Gabriele, is that really a P1 ? :)

Flags: needinfo?(gsvelto)

Duh, it's something I wanted to work on then I forgot. Let's dial it down.

Flags: needinfo?(gsvelto)
Priority: P1 → P3
Assignee: nobody → gsvelto
Status: NEW → ASSIGNED
Pushed by gsvelto@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f8611c864db2 Don't assert on error conditions when changing the priority of a process on Windows r=bobowen
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: