Bug 1604106 - Don't assert on error conditions when changing the priority of a process on Windows r=bobowen

Differential Revision: https://phabricator.services.mozilla.com/D109088